## Process this file with automake to produce Makefile.in.

ACLOCAL_AMFLAGS = -Im4
# Uses foreign for now.
AUTOMAKE_OPTIONS = foreign

SUBDIRS = config src test

vm68kincludedir = $(includedir)/vm68k

nodist_vm68kinclude_HEADERS = vm68kint.h

EXTRA_DIST = libvm68k.groupproj vm68k.cbproj ModelSupport_vm68k
